--- a/styles.css
+++ b/styles.css
@@ -10,5 +10,6 @@ html, body {
 
 #game {
 	display: block;
-        background-color: #EEE;
+  background-color: #EEE;
+	cursor: url(resources/pointer.png) 1 1, auto;
 }
